force-app/main/default/objects/Agreement_Account_Relationship__c/Agreement_Account_Relationship__c.object-meta.xml
<CustomObject>
    <description>Represents the Association of Agreement(s) and Account(s)</description>
    <label>Agreement Account Relationship</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Agreement Account Relationship</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Account Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>