force-app/main/default/objects/Agreement_Account_Relationship__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>DCP-32801 - Related Account record</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Agreement Account Relationships</relationshipLabel>
    <relationshipName>Agreement_Account_Relationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>