force-app/main/default/objects/Agreement_Account_Relationship__c/fields/Account_Default_Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>Account_Default_Sales_Org__c</fullName>
    <description>Field to Store Default Sales Org</description>
    <label>Account Default Sales Org</label>
    <length>4</length>
    <type>Text</type>
</CustomField>