force-app/main/default/objects/Agreement_Account_Relationship__c/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <description>Lookup to Agreement</description>
    <inlineHelpText>DCP-32801 - Related Agreement record</inlineHelpText>
    <label>Agreement</label>
    <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
    <relationshipLabel>Agreement Account Relationships</relationshipLabel>
    <relationshipName>Agreement_Account_Relationships</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>