force-app/main/default/objects/Agreement_Account_Relationship__c/fields/Customer_ERP_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_ERP_Number__c</fullName>
    <description>Stores Cusomer ERP Number</description>
    <formula>Account__r.ERP_Customer_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer ERP Number</label>
    <type>Text</type>
</CustomField>