force-app/main/default/objects/Agreement_Account_Relationship__c/fields/Template_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Account_Name__c</fullName>
    <description>Formula field to store Account Name</description>
    <formula>IF(NOT(ISBLANK(Account__r.NameLocal)), Account__r.NameLocal, Account__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Template Account Name</label>
    <type>Text</type>
</CustomField>