force-app/main/default/objects/Agreement_Account_Relationship__c/validationRules/CheckForAccountEditForOpenOffer.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckForAccountEditForOpenOffer</fullName>
    <active>true</active>
    <description>Validation rule to restrict account edit on agreement account relationship</description>
    <errorConditionFormula>AND(
    !$Setup.cs_Apex_Settings__c.Bypass_All_Validations__c,
    NOT(ISNEW()),
    ISCHANGED( Account__c ),
    Agreement__r.RecordType.DeveloperName = $Label.AgreementRecordTypeDevNameOpenOffer
)</errorConditionFormula>
    <errorMessage>You cannot change the account on the agreement account relationship.</errorMessage>
</ValidationRule>